--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,13 +9,13 @@
       <ul class="navbar-nav mr-auto"></ul>
       <ul class="navbar-nav">
         <% if logged_in? %>
-        <li class="nav-item"><%= link_to 'Users', users_path, class: 'nav-link' %></li>
+        <li class="nav-item"><%= link_to 'ロット一覧', lots_path, class: 'nav-link' %></li>
         <li class="nav-item dropdown">
           <a href= "#" class="nav-link dropdown-toggle" data-toggle="dropdown"><%= current_user.name %></a>
           <ul class="dropdown-menu dropdown-menu-right">
-            <li class="dropdown-item"><%= link_to 'ユーザー情報', user_path(current_user)%></li>
-            <li class="dropdown-divider"></li>
             <li class="dropdown-item"><%= link_to 'ログアウト', logout_path, method:  :delete %></li>
+            <li class="dropdown-divider"></li>
+            <li class="dropdown-item"><%#= link_to '退会する', logout_path, method:  :delete %></li>
           </ul>
         </li>
 
